@@ -1,3 +1,12 @@
+2004-02-01  Julien MOUTTE  <julien@moutte.net>
+
+	* gst-libs/gst/play/play.c: (gst_play_seek_to_time),
+	(gst_play_new): Accepting NULL GError, blocking time tick while seeking.
+	* sys/ximage/ximagesink.c: (gst_ximagesink_sink_link),
+	(gst_ximagesink_chain), (gst_ximagesink_init): s/sinkconnect/sink_link
+	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_sink_link),
+	(gst_xvimagesink_chain), (gst_xvimagesink_init): s/sinkconnect/sink_link
+
 2004-02-01  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* configure.ac:
